first day trying

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sign-up form</h1>
+        <div class="container"><div class="log">
+            <div class="text">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up now to get started.</p>
+                <p>You know you want to.</p>
+            </div>
+        </div>
+        <div class="form">
+            <h1>Let's do this!</h1>
+                <label for="fname">First name</label>
+                <input type="text" id="fname" name="fname">
+                <label for="lname">Last name</label>
+                <input type="text" id="lname" name="lname">
+                <label for="password">Password</label>
+                <input type="password" autofocus name="pword" id="pword">
+                <label for="password">Confirm Password</label>
+                <input type="password" name="pword" id="pword">
+                <label for="e-mail">Email</label>
+                <input type="email" name="mail" id="mail">
+                <label for="phone">Phone Number</label>
+                <input type="email" name="mail" id="mail">
+        </div>
+        <div class="close">
+            <label for="button">Create account</label>
+            <input type="button" name="accbtn" id="accbtn">
+            <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
 </body>
 </html>
