--- a/index.html
+++ b/index.html
@@ -5,34 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Sign-up form</title>
 </head>
 <body>
-        <div class="container"><div class="log">
-            <div class="text">
-                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up now to get started.</p>
-                <p>You know you want to.</p>
-            </div>
-        </div>
-        <div class="form">
-            <h1>Let's do this!</h1>
-                <label for="fname">First name</label>
-                <input type="text" id="fname" name="fname">
-                <label for="lname">Last name</label>
-                <input type="text" id="lname" name="lname">
-                <label for="password">Password</label>
-                <input type="password" autofocus name="pword" id="pword">
-                <label for="password">Confirm Password</label>
-                <input type="password" name="pword" id="pword">
-                <label for="e-mail">Email</label>
-                <input type="email" name="mail" id="mail">
-                <label for="phone">Phone Number</label>
-                <input type="email" name="mail" id="mail">
-        </div>
-        <div class="close">
-            <label for="button">Create account</label>
-            <input type="button" name="accbtn" id="accbtn">
-            <p>Already have an account? <a href="#">Log in</a></p>
-        </div>
+    <div class="main">
+        <div class="logo"></div>
+        <div class="info"></div>
+    </div>
 </body>
 </html>
