the set up of the site

--- a/index.html
+++ b/index.html
@@ -9,8 +9,62 @@
 </head>
 <body>
     <div class="main">
-        <div class="logo"></div>
-        <div class="info"></div>
+        <div class="transparent"></div>
+        <div class="logo">
+            <img src="odin-lined.png" alt="img">
+            <div class="title">
+                <h1 class="top">The Odin Project</h1>
+            </div>
+        </div>
+        <div class="info">
+            <div class="description">
+                <div class="long">
+                    <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+                </div>
+                <div class="short">
+                    You know you want to.
+                </div>
+            </div>
+            <div class="data">
+                <div class="start">
+                    <h1>Let's do this!</h1>
+                </div>
+                <div class="fill">
+                    <div class="user">
+                        <label for="fname">First name:</label>
+                        <input type="text" id="fname" name="fname">
+                    </div>
+                    <div class="user">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div class="user">
+                        <label for="Password">Password:</label>
+                        <input type="password" id="Password" name="Password">
+                    </div>
+                    <div class="user">
+                        <label for="lname">Last name:</label>
+                        <input type="text" id="lname" name="lname">
+                    </div>
+                    <div class="user">
+                        <label for="number">Phone number:</label>
+                        <input type="number" id="number" name="number">
+                    </div>
+                    <div class="user">
+                        <label for="Password">Confirm password:</label>
+                        <input type="password" id="Password" name="Password">
+                    </div>
+                </div>
+            </div>
+            <div class="but">
+                <div class="confirmation">
+                    <button type="button" class="button">Create Account</button>
+                </div>
+                <div class="question">
+                    <p>Already have an account? <a href="#">Log in</a></p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
