styling buttons and labels

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
                 <div class="fill">
                     <div class="user">
                         <label for="fname">First name:</label>
-                        <input type="text" id="fname" name="fname">
+                        <input type="text" id="fname" name="fname" autocomplete="off">
                     </div>
                     <div class="user">
                         <label for="email">Email:</label>
-                        <input type="email" id="email" name="email">
+                        <input type="email" id="email" name="email" autocomplete="off">
                     </div>
                     <div class="user">
                         <label for="Password">Password:</label>
-                        <input type="password" id="Password" name="Password">
+                        <input type="password" id="Password" name="Password" autocomplete="off">
                     </div>
                     <div class="user">
                         <label for="lname">Last name:</label>
-                        <input type="text" id="lname" name="lname">
+                        <input type="text" id="lname" name="lname" autocomplete="off">
                     </div>
                     <div class="user">
                         <label for="number">Phone number:</label>
-                        <input type="number" id="number" name="number">
+                        <input type="number" id="number" name="number" autocomplete="off">
                     </div>
                     <div class="user">
-                        <label for="Password">Confirm password:</label>
-                        <input type="password" id="Password" name="Password">
+                        <label for="Password1">Confirm password:</label>
+                        <input type="password" id="Password1" name="Password" autocomplete="off">
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <button type="button" class="button">Create Account</button>
                 </div>
                 <div class="question">
-                    <p>Already have an account? <a href="#">Log in</a></p>
+                    <p>Already have an account? <a class="log" href="#">Log in</a></p>
                 </div>
             </div>
         </div>
